# BugBridge

./: .env.example  .gitignore  CANNY_API_REFERENCE.md  POSITIONING.md  PROJECT_REPORT.md  README.md  TESTING_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test-platform.sh
.emergent/: emergent.yml
bugbridge/: __init__.py  config.py
bugbridge/agents/: __init__.py  backfill.py  base.py  bug_detection.py  collection.py  jira_creation.py  monitoring.py  notification.py  priority.py  reporting.py  sentiment.py
bugbridge/api/: __init__.py  dependencies.py  error_handlers.py  exceptions.py  main.py  responses.py
bugbridge/api/middleware/: auth.py
bugbridge/api/models/: __init__.py  validation.py
bugbridge/api/routes/: __init__.py  auth.py  config.py  feedback.py  jira_tickets.py  metrics.py  reports.py
bugbridge/cli/: __init__.py  report.py
bugbridge/database/: connection.py  models.py  schema.py
bugbridge/integrations/: canny.py  email.py  file_storage.py  mcp_jira.py  scheduler.py  xai.py
bugbridge/models/: __init__.py  analysis.py  feedback.py  jira.py  report_filters.py  state.py
bugbridge/tools/: __init__.py  canny_tools.py  engagement_tools.py  jira_tools.py
bugbridge/utils/: assignment.py  logging.py  notifications.py  retry.py  validators.py
bugbridge/workflows/: __init__.py  main.py  persistence.py  reporting.py
dashboard/: README.md  TESTING.md  fix-server.sh  jest.config.js  jest.setup.js  next.config.ts  package.json  playwright.config.ts
dashboard/e2e/: auth.spec.ts  dashboard.spec.ts  responsive.spec.ts
dashboard/lib/: api-client.ts  query-client.ts
dashboard/services/api/: auth.ts  config.ts  feedback.ts  jira.ts  metrics.ts  reports.ts
dashboard/src/__tests__/components/auth/: RequireRole.test.tsx
dashboard/src/__tests__/components/common/: ErrorBoundary.test.tsx  LoadingSpinner.test.tsx
dashboard/src/__tests__/hooks/: useAuth.test.ts  useAuth.test.tsx
dashboard/src/__tests__/lib/: api-client.test.ts
dashboard/src/__tests__/services/api/: auth.test.ts
dashboard/src/app/: layout.tsx  page.tsx  providers.tsx
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/feedback/: page.tsx
dashboard/src/app/feedback/[id]/: page.tsx
dashboard/src/app/jira-tickets/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/metrics/: page.tsx
dashboard/src/app/reports/: page.tsx
dashboard/src/app/reports/[id]/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/auth/: ProtectedRoute.tsx  RequireRole.tsx
dashboard/src/components/common/: ErrorBoundary.tsx  LoadingSpinner.tsx  SkeletonLoader.tsx
dashboard/src/components/config/: CannySettingsForm.tsx  JiraSettingsForm.tsx  PriorityWeightsForm.tsx  ReportingSettingsForm.tsx  XAISettingsForm.tsx
dashboard/src/components/feedback/: FeedbackFilters.tsx  FeedbackTable.tsx  Pagination.tsx
dashboard/src/components/jira/: JiraTicketFilters.tsx  JiraTicketsTable.tsx
dashboard/src/components/layout/: DashboardLayout.tsx  Header.tsx  MobileSidebar.tsx  Sidebar.tsx
dashboard/src/components/metrics/: BugsVsFeaturesChart.tsx  BurningIssuesList.tsx  ChartDrillDown.tsx  JiraStatusChart.tsx  MetricCard.tsx  PriorityList.tsx  PriorityScoreChart.tsx  SentimentChart.tsx  TimeSeriesChart.tsx
dashboard/src/components/reports/: ReportCard.tsx  ReportFilters.tsx  ReportMetricsCharts.tsx  ReportViewer.tsx
dashboard/src/hooks/: useAuth.ts  useFeedback.ts  useJira.ts  useMetrics.ts  useReports.ts  useSessionRestore.ts
dashboard/src/lib/: api-client.ts  canny-utils.ts  jira-utils.ts  query-client.ts
dashboard/src/middleware/: auth.ts
dashboard/src/services/api/: auth.ts  config.ts  feedback.ts  jira.ts  metrics.ts  reports.ts
dashboard/src/store/: auth-store.ts
dashboard/store/: auth-store.ts
docs/: mcp-atlassian-study.md  testing-with-real-mcp-server.md
docs/screenshots/: .gitkeep  README.md
mcp-atlassian/: .gitignore
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
reports/2025/12/: report_2025-12-04_067e8f8f.json  report_2025-12-04_067e8f8f.md  report_2025-12-04_108755f2.md  report_2025-12-04_5d9e007a.md  report_2025-12-04_5dded064.md  report_2025-12-04_82fa8eea.md  report_2025-12-04_8421184b.md  report_2025-12-04_dcacf0ed.md  report_2025-12-04_e8c5f886.md
scripts/: create_admin_user.py  delete_all_feedback.py  init_database.py  process_existing_posts.py  test_real_mcp_server.sh  verify_mcp_server.py
tasks/: prd-bugbridge-platform.md  tasks-bugbridge-platform.md
tests/: __init__ 2.py  __init__.py  test_analysis_pipeline_integration.py  test_base_agent.py  test_bug_detection_agent.py  test_canny_client.py  test_canny_tools.py  test_collection_agent.py  test_config.py  test_deterministic_behavior.py  test_jira_creation_integration.py  test_jira_real_mcp_server.py  test_jira_tools.py  test_mcp_jira_client.py  test_models.py  test_priority_scoring_agent.py  test_reporting_agent.py  test_sentiment_analysis_agent.py  test_xai_integration.py
